--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ([2.64])
 AC_INIT
-AC_CONFIG_SRCDIR([access.c])
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_SRCDIR([src/system/access.c])
+AC_CONFIG_HEADERS([include/config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
 dnl AC_CMDSTDOUT_CPP(variable, command, headers)
