--- a/include/config.h.in
+++ b/include/config.h.in
@@ -44,6 +44,9 @@
 /* Define to 1 if you have the <ndir.h> header file, and it defines 'DIR'. */
 #undef HAVE_NDIR_H
 
+/* Define to 1 if you have readline. */
+#undef HAVE_READLINE
+
 /* Define to 1 if you have the 'setrlimit' function. */
 #undef HAVE_SETRLIMIT
 
